--- a/EmojiAttributes.plist
+++ b/EmojiAttributes.plist
@@ -7,6 +7,7 @@
 		<key>Bundles</key>
 		<array>
 			<string>com.apple.UIKit</string>
+			<string>com.apple.WebKit.WebContent</string>
 		</array>
 	</dict>
 </dict>
